# msgpack_cpp

./: CMakeLists.txt  README.md  msgpack.h  msgpack_describe.h  test.cpp
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
bench/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp  example4.cpp
include/: msgpack.h  msgpack_describe.h  msgpack_error.h  msgpack_sinks.h
src/: msgpack.cpp  msgpack.h  msgpack_sinks.h
test/: CMakeLists.txt  example.cpp  test.cpp
tests/: CMakeLists.txt  pack.cpp  sinks.cpp  value.cpp
